fix old reference to terrier

--- a/test/index.htm
+++ b/test/index.htm
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>terrier tests!</title>
+  <title>pluck-elements tests!</title>
   <script src='bundle.js'></script>
 </head>
 <body onload='init();'>
